use cases implementation and exceptions