@@ -2,6 +2,8 @@ package com.co.flypass.gestionempleados.infraestructure.persistence.employee;
 
 import com.co.flypass.gestionempleados.domain.employee.Employee;
 import com.co.flypass.gestionempleados.domain.employee.EmployeeRepository;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
 import org.springframework.data.repository.ListCrudRepository;
 import org.springframework.stereotype.Repository;
 
@@ -10,7 +12,8 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Repository
-public interface EmployeeRepositoryImpl extends ListCrudRepository<EmployeeEntity, Long>, EmployeeRepository {
+public interface EmployeeRepositoryImpl extends ListCrudRepository<EmployeeEntity, Long>,
+        JpaSpecificationExecutor<EmployeeEntity>, EmployeeRepository {
 
     @Override
     default void save(Employee employee) {
@@ -28,8 +31,20 @@ public interface EmployeeRepositoryImpl extends ListCrudRepository<EmployeeEntit
     }
 
     @Override
-    default List<Employee> findAllEmployess() {
-       return findAll().stream().map(EmployeeEntity::toDomain).collect(Collectors.toList());
+    default Optional<List<Employee>>  findAllEmployess() {
+        List<Employee> listDomain = findAll().stream().map(EmployeeEntity::toDomain).toList();
+        if (listDomain.isEmpty()) return Optional.empty();
+        return Optional.of(listDomain);
     }
 
+    @Override
+    default Optional<List<Employee>>  findAllEmployess(String document, String position, String status) {
+
+        Specification<EmployeeEntity> specification = EmployeeSpecification.get(document, position, status);
+        List<EmployeeEntity> listEntity = findAll(specification);
+        List<Employee> listDomain = listEntity.stream().map(EmployeeEntity::toDomain).toList();
+
+        if (listDomain.isEmpty()) return Optional.empty();
+        return Optional.of(listDomain);
+    }
 }
